--- a/examples/module/Makefile
+++ b/examples/module/Makefile
@@ -1,6 +1,6 @@
-.PHONY: all install-tools fmt document table
+.PHONY: all install-tools fmt document
 
-all: install-tools fmt docs
+all: install-tools fmt document
 
 install-tools:
 	go install github.com/terraform-docs/terraform-docs@latest
@@ -12,16 +12,6 @@ document:
 		if [ -d "$$dir" ]; then \
 			echo "Processing $$dir..."; \
 			terraform-docs markdown document "$$dir" --output-file "$$dir/README.md" --output-mode inject --hide modules || echo "Skipped: $$dir"; \
-		fi \
-	done
-
-table:
-	@echo "Generating table-style documentation for root and modules..."
-	terraform-docs markdown table . --output-file README.md --output-mode inject --hide modules
-	for dir in modules/*; do \
-		if [ -d "$$dir" ]; then \
-			echo "Processing $$dir..."; \
-			terraform-docs markdown table "$$dir" --output-file "$$dir/README.md" --output-mode inject --hide modules || echo "Skipped: $$dir"; \
 		fi \
 	done
 
